src/test/deca/context/valid/SansObjet/DeclVar-NE-boolean-int-float.deca
// Description:
//    Declaration of a boolean variable using != operation between a int variable and float .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  20; 
    float y = 3.14; 
    boolean z = 20 != 3.14; 
}
