src/test/deca/context/invalid/SansObjet/DeclVar-Greater-int-boolean-string.deca
// Description:
//    Declaration of a int variable using > operation between a boolean variable and string .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  true; 
    string y = "World"; 
    int z = true > "World"; 
}
